--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
   "dependencies": {
     "bn.js": "=2.0.4",
     "bs58": "=2.0.0",
+    "buffer": "^4.5.1",
     "buffer-compare": "=1.0.0",
     "crypto-browserify": "^3.11.0",
     "elliptic": "=3.0.3",
