--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "request": "browser-request"
   },
   "dependencies": {
+    "assert": "^1.3.0",
     "bn.js": "=2.0.4",
     "bs58": "=2.0.0",
     "buffer": "^4.5.1",
