--- a/package.json
+++ b/package.json
@@ -89,7 +89,8 @@
     "elliptic": "=3.0.3",
     "inherits": "=2.0.1",
     "lodash": "=3.10.1",
-    "sha512": "=0.0.1"
+    "sha512": "=0.0.1",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "bitcore-build": "bitpay/bitcore-build",
