--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "inherits": "=2.0.1",
     "lodash": "=3.10.1",
     "sha512": "=0.0.1",
+    "stream": "0.0.2",
     "url": "^0.11.0"
   },
   "devDependencies": {
