--- a/package.json
+++ b/package.json
@@ -87,11 +87,13 @@
     "buffer-compare": "=1.0.0",
     "crypto-browserify": "^3.11.0",
     "elliptic": "=3.0.3",
+    "http": "0.0.0",
     "inherits": "=2.0.1",
     "lodash": "=3.10.1",
     "sha512": "=0.0.1",
     "stream": "0.0.2",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "util": "^0.10.3"
   },
   "devDependencies": {
     "bitcore-build": "bitpay/bitcore-build",
