--- a/package.json
+++ b/package.json
@@ -93,7 +93,8 @@
     "sha512": "=0.0.1",
     "stream": "0.0.2",
     "url": "^0.11.0",
-    "util": "^0.10.3"
+    "util": "^0.10.3",
+    "vm-browserify": "0.0.4"
   },
   "devDependencies": {
     "bitcore-build": "bitpay/bitcore-build",
